--- a/app.json
+++ b/app.json
@@ -3,11 +3,9 @@
     "name": "beerpi",
     "slug": "beerpi",
     "privacy": "public",
-    "sdkVersion": "34.0.0",
+    "sdkVersion": "35.0.0",
     "platforms": [
-      "ios",
-      "android",
-      "web"
+      "android"
     ],
     "version": "1.0.0",
     "orientation": "portrait",
@@ -28,7 +26,7 @@
     },
     "isDetached": true,
     "detach": {
-      "androidExpoViewUrl": "https://s3.amazonaws.com/exp-exponent-view-code/android-v2.12.0-sdk34.0.0-997916d4-13c2-4ac7-a0cd-6df1b280bc3c.tar.gz"
+      "androidExpoViewUrl": "https://s3.amazonaws.com/exp-exponent-view-code/android-v2.13.0-sdk35.0.0-b816b7af-88da-4ca9-87a5-7438f0c21b6e.tar.gz"
     },
     "scheme": "expfdd77aecbaaf47489779b2a2f23439ee",
     "android": {
